format links on their own line

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ Byzantine Christian Classics.”</p>
 <blockquote>
 <p>In <em>Language Multiplicity in Byzantium and Beyond</em>,
 ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna
-University Press through Vandenhoeck &amp; Ruprecht, forthcoming). [<a
-href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
+University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
+[<a href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
 <h3 id="section">2022</h3>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
@@ -72,31 +72,32 @@ Chioniades on John of Damascus.”</p>
 <blockquote>
 <p>In <em>The Diagram as Paradigm: Cross-Cultural Approaches</em>,
 ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC:
-Dumbarton Oaks, 2022), 113–148. [<a
+Dumbarton Oaks, 2022), 113–148.<br />
+[<a
 href="https://www.hup.harvard.edu/catalog.php?isbn=9780884024866">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:47227/">PDF</a>]</p>
 </blockquote>
 <p>“Islamicate Alchemy in Greek Letters on the First Page of
 <em>Marcianus graecus</em> 299.”</p>
 <blockquote>
-<p><em>Byzantinische Zeitschrift</em> 115.1 (2022): 341–349. [<a
-href="https://doi.org/10.1515/bz-2022-0012">pub</a>|PDF <a
-href="https://hcommons.org/deposits/item/hc:45383/">starting
+<p><em>Byzantinische Zeitschrift</em> 115.1 (2022): 341–349.<br />
+[<a href="https://doi.org/10.1515/bz-2022-0012">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:45383/">hcommons
 2023-04-11</a>]</p>
 </blockquote>
 <h3 id="section-1">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
-published May 2021): 1–36. [<a
-href="https://doi.org/10.1086/JWCI83010001">pub freely
-available</a>]</p>
+published May 2021): 1–36.<br />
+[<a href="https://doi.org/10.1086/JWCI83010001">pub open</a>]</p>
 </blockquote>
 <!--available on HC starting 2023-10-14-->
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
 Ascetic.”</p>
 <blockquote>
-<p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166. [<a
+<p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166.<br />
+[<a
 href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:38251/">PDF</a>]</p>
 </blockquote>
@@ -104,14 +105,15 @@ href="https://hcommons.org/deposits/item/hc:38251/">PDF</a>]</p>
 <p>“Mathematical Philology in the Treatise on Double False Position in
 an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
-<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a
-href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a
+<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352.<br />
+[<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a
 href="https://zenodo.org/record/4408536">postprint</a>|<a
 href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 </blockquote>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102.
+<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020):
+69–102.<br />
 [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
@@ -121,7 +123,8 @@ al-Faḍl of Antioch.”</p>
 <blockquote>
 <p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>,
 ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts
-and Studies 2 (Leiden: Brill, 2020; published October 2019), 198–240.
+and Studies 2 (Leiden: Brill, 2020; published October 2019),
+198–240.<br />
 [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
@@ -129,7 +132,8 @@ href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
 <blockquote>
 <p><em>Journal of the American Oriental Society</em> 137.2 (2017):
-253–277. [<a
+253–277.<br />
+[<a
 href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
@@ -140,14 +144,15 @@ Arabic ‘Book of Degrees.’”</p>
 <p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX
 secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri,
 Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale,
-2013), 279–303. [<a
-href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
+2013), 279–303.<br />
+[<a href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-6">2012</h3>
 <p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
 <p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012):
-145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a
+145–160.<br />
+[<a href="https://doi.org/10.4000/beo.406">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 </blockquote>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
@@ -161,14 +166,15 @@ Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <blockquote>
 <p>“The Paths and Memories Tying Antioch to Its Hinterland,” <em>Journal
-of Roman Archaeology</em> 30 (2017): 810–817. [<a
-href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
+of Roman Archaeology</em> 30 (2017): 810–817.<br />
+[<a href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
 </blockquote>
 <p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD
 500–1000</em> (American University in Cairo Press, 2012).</p>
 <blockquote>
 <p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29,
-2014. [<a
+2014.<br />
+[<a
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
