JHI article accepted

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@ Scholarship 3 (University of California Press, 2020). [<a
 href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
+<p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
+<blockquote>
+<p><em>Journal of the History of Ideas</em> (forthcoming).</p>
+</blockquote>
 <p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
 <blockquote>
 <p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1
@@ -178,6 +182,6 @@ of Roman Archaeology</em> 30 (2017): 810–817.<br />
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated July 2022.</em>]</small></p>
+<p><small>[<em>Last updated August 2022.</em>]</small></p>
 </body>
 </html>
