--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@ href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">e
 <p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1
 (forthcoming 2022).</p>
 </blockquote>
-<p>“Byzantine Engagement with Islamicate Alchemy.”</p>
-<blockquote>
-<p><em>Isis: A Journal of the History of Science Society</em> 113.3
-(forthcoming 2022).</p>
-</blockquote>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
 ʿAbdun.”</p>
 <blockquote>
@@ -71,6 +66,13 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 [<a href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
 <h3 id="section">2022</h3>
+<p>“Byzantine Engagement with Islamicate Alchemy.”</p>
+<blockquote>
+<p><em>Isis: A Journal of the History of Science Society</em> 113.3
+(2022): 559–580.<br />
+[<a href="https://doi.org/10.1086/721264">open access for first
+month</a>]</p>
+</blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
 Chioniades on John of Damascus.”</p>
 <blockquote>
