add link to GrAlchEd

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo
 |
 <!-- <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="✺">orcid</a> -->
 <a href="https://orcid.org/0000-0002-6648-5392">orcid</a> ]</p>
+<p>[ <a href="https://gralched.hcommons.org/">Greek Alchemical Editions
+in Progress</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="book">Book</h2>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and
