shorten Isis journal name to just Isis

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="pubwebsite.css" />
@@ -70,8 +75,7 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 <h3 id="section">2022</h3>
 <p>“Byzantine Engagement with Islamicate Alchemy.”</p>
 <blockquote>
-<p><em>Isis: A Journal of the History of Science Society</em> 113.3
-(2022): 559–580.<br />
+<p><em>Isis</em> 113.3 (2022): 559–580.<br />
 [<a href="https://doi.org/10.1086/721264">open access for first
 month</a>]</p>
 </blockquote>
