--- a/index.html
+++ b/index.html
@@ -54,11 +54,6 @@ href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">e
 <blockquote>
 <p><em>Journal of the History of Ideas</em> (forthcoming).</p>
 </blockquote>
-<p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
-<blockquote>
-<p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1
-(forthcoming 2022).</p>
-</blockquote>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
 ʿAbdun.”</p>
 <blockquote>
@@ -73,6 +68,14 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 [<a href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
 <h3 id="section">2022</h3>
+<p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
+<blockquote>
+<p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1.1–2
+(2022): 167–199.<br />
+[<a
+href="https://www.euppublishing.com/doi/epub/10.3366/jlaibs.2022.0009">open
+access for first two months</a>]</p>
+</blockquote>
 <p>“Byzantine Engagement with Islamicate Alchemy.”</p>
 <blockquote>
 <p><em>Isis</em> 113.3 (2022): 559–580.<br />
@@ -190,6 +193,6 @@ of Roman Archaeology</em> 30 (2017): 810–817.<br />
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated August 2022.</em>]</small></p>
+<p><small>[<em>Last updated September 2022.</em>]</small></p>
 </body>
 </html>
