go to pdf by default

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 <p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1.1–2
 (2022): 167–199.<br />
 [<a
-href="https://www.euppublishing.com/doi/epub/10.3366/jlaibs.2022.0009">open
+href="https://www.euppublishing.com/doi/epdf/10.3366/jlaibs.2022.0009">open
 access for first two months</a>]</p>
 </blockquote>
 <p>“Byzantine Engagement with Islamicate Alchemy.”</p>
