add link to Isis author interview

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@ access for first two months</a>]</p>
 <blockquote>
 <p><em>Isis</em> 113.3 (2022): 559–580.<br />
 [<a href="https://doi.org/10.1086/721264">open access for first
-month</a>]</p>
+month</a>] [<a
+href="https://hssonline.org/news/616068/Isis-September-2022---Author-Interview-with-Alexandre-Roberts.htm">interview
+about the article</a>]</p>
 </blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
 Chioniades on John of Damascus.”</p>
