--- a/index.html
+++ b/index.html
@@ -54,11 +54,6 @@ href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">e
 <blockquote>
 <p><em>Journal of the History of Ideas</em> (forthcoming).</p>
 </blockquote>
-<p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
-ʿAbdun.”</p>
-<blockquote>
-<p><em>Dumbarton Oaks Papers</em> 76 (forthcoming 2022).</p>
-</blockquote>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of
 Byzantine Christian Classics.”</p>
 <blockquote>
@@ -68,6 +63,12 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 [<a href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
 <h3 id="section">2022</h3>
+<p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
+ʿAbdun.”</p>
+<blockquote>
+<p><em>Dumbarton Oaks Papers</em> 76 (2022): 117–144.<br />
+[<a href="https://hcommons.org/deposits/item/hc:49627/">PDF</a>]</p>
+</blockquote>
 <p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
 <blockquote>
 <p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1.1–2
