add pub link for DOP art

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 ʿAbdun.”</p>
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 76 (2022): 117–144.<br />
-[<a href="https://hcommons.org/deposits/item/hc:49627/">PDF</a>]</p>
+[<a href="https://www.jstor.org/stable/27172437">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:49627/">PDF</a>]</p>
 </blockquote>
 <p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
 <blockquote>
