--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ access for first two months</a>]</p>
 <blockquote>
 <p><em>Isis</em> 113.3 (2022): 559–580.<br />
 [<a href="https://doi.org/10.1086/721264">open access for first
-month</a>] [<a
+month</a>]<br />
+[<a
 href="https://hssonline.org/news/616068/Isis-September-2022---Author-Interview-with-Alexandre-Roberts.htm">interview
 about the article</a>]</p>
 </blockquote>
@@ -197,6 +198,6 @@ of Roman Archaeology</em> 30 (2017): 810–817.<br />
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated September 2022.</em>]</small></p>
+<p><small>[<em>Last updated November 2022.</em>]</small></p>
 </body>
 </html>
