link to JRA rev
because embargo is about to lift

--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@ Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <blockquote>
 <p>“The Paths and Memories Tying Antioch to Its Hinterland,” <em>Journal
 of Roman Archaeology</em> 30 (2017): 810–817.<br />
-[<a href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
+[<a href="https://doi.org/10.1017/S1047759400074845">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:33751/">hcommons
+2022-12-27</a>]</p>
 </blockquote>
 <p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD
 500–1000</em> (American University in Cairo Press, 2012).</p>
