JRA review now on hcommons

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ href="https://hcommons.org/deposits/item/hc:45383/">hcommons
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36.<br />
-[<a href="https://doi.org/10.1086/JWCI83010001">pub open</a>]</p>
+[<a href="https://doi.org/10.1086/JWCI83010001">open</a>]</p>
 </blockquote>
 <!--available on HC starting 2023-10-14-->
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
@@ -188,8 +188,7 @@ Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <p>“The Paths and Memories Tying Antioch to Its Hinterland,” <em>Journal
 of Roman Archaeology</em> 30 (2017): 810–817.<br />
 [<a href="https://doi.org/10.1017/S1047759400074845">pub</a>|<a
-href="https://hcommons.org/deposits/item/hc:33751/">hcommons
-2022-12-27</a>]</p>
+href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 </blockquote>
 <p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD
 500–1000</em> (American University in Cairo Press, 2012).</p>
@@ -200,6 +199,6 @@ href="https://hcommons.org/deposits/item/hc:33751/">hcommons
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated November 2022.</em>]</small></p>
+<p><small>[<em>Last updated January 2023.</em>]</small></p>
 </body>
 </html>
