History courtesy appointment

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <header id="title-block-header">
 <h1 class="title">Alexandre M. Roberts</h1>
 </header>
-<p>Associate Professor of Classics<br />
+<p>Associate Professor of Classics and History<br />
 University of Southern California<br />
 Los Angeles, California</p>
 <p>[ <a
