update links to hcommons

--- a/index.html
+++ b/index.html
@@ -102,15 +102,16 @@ href="https://hcommons.org/deposits/item/hc:47227/">PDF</a>]</p>
 <blockquote>
 <p><em>Byzantinische Zeitschrift</em> 115.1 (2022): 341–349.<br />
 [<a href="https://doi.org/10.1515/bz-2022-0012">pub</a>|<a
-href="https://hcommons.org/deposits/item/hc:45383/">hcommons
-2023-04-11</a>]</p>
+href="https://hcommons.org/deposits/item/hc:45383/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-1">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36.<br />
-[<a href="https://doi.org/10.1086/JWCI83010001">open</a>]</p>
+[<a href="https://doi.org/10.1086/JWCI83010001">open</a>]|[<a
+href="https://hcommons.org/deposits/item/hc:41801/">hcommons
+2023-10-14</a>]</p>
 </blockquote>
 <!--available on HC starting 2023-10-14-->
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
