JHI art scheduled

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">e
 <h3 id="forthcoming">forthcoming</h3>
 <p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
 <blockquote>
-<p><em>Journal of the History of Ideas</em> (forthcoming).</p>
+<p><em>Journal of the History of Ideas</em> 84.4 (expected October
+2023).</p>
 </blockquote>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of
 Byzantine Christian Classics.”</p>
