rearrange order; make

--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@ Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic
 Scholarship 3 (University of California Press, 2020). [<a
 href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
-<h3 id="forthcoming">forthcoming</h3>
+<h3 id="future">future</h3>
 <p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
 <blockquote>
 <p><em>Journal of the History of Ideas</em> 84.4 (expected October
 2023).</p>
+</blockquote>
+<p>“Alchemy, History, and Myth in the Souda Lexicon.”</p>
+<blockquote>
+<p>In <em>Alchemy in Byzantium</em>, ed. Gerasimos Merianos (Athens:
+Institute of Historical Research, National Hellenic Research Foundation;
+invited November 2020; submitted August 2021).</p>
 </blockquote>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of
 Byzantine Christian Classics.”</p>
@@ -62,6 +68,11 @@ Byzantine Christian Classics.”</p>
 ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna
 University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 [<a href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
+</blockquote>
+<p>“Arabic Reception” (of John of Damascus).</p>
+<blockquote>
+<p>In <em>Companion to John of Damascus</em>, ed. Ken Parry (Leiden:
+Brill; invited July 2020; submitted June 2022).</p>
 </blockquote>
 <h3 id="section">2022</h3>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
@@ -201,6 +212,6 @@ href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated January 2023.</em>]</small></p>
+<p><small>[<em>Last updated April 2023.</em>]</small></p>
 </body>
 </html>
