--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ href="https://hcommons.org/deposits/item/hc:45383/">PDF</a>]</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36.<br />
-[<a href="https://doi.org/10.1086/JWCI83010001">open</a>]|[<a
+[<a href="https://doi.org/10.1086/JWCI83010001">open</a>|<a
 href="https://hcommons.org/deposits/item/hc:41801/">hcommons
 2023-10-14</a>]</p>
 </blockquote>
