new faculty page URL

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 University of Southern California<br />
 Los Angeles, California</p>
 <p>[ <a
-href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty
+href="https://dornsife.usc.edu/profile/alexandre-roberts/">faculty
 page</a> | <a
 href="https://hcommons.org/members/amroberts/">hcommons</a> | <a
 href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a>
