DOP is now open access

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Brill; invited July 2020; submitted June 2022).</p>
 ʿAbdun.”</p>
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 76 (2022): 117–144.<br />
-[<a href="https://www.jstor.org/stable/27172437">pub</a>|<a
+[<a href="https://archive.org/details/DOP76_06_Roberts">open</a>|<a
 href="https://hcommons.org/deposits/item/hc:49627/">PDF</a>]</p>
 </blockquote>
 <p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
@@ -147,7 +147,7 @@ href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020):
 69–102.<br />
-[<a href="https://www.jstor.org/stable/26955172">pub</a>|<a
+[<a href="https://archive.org/details/DOP73_05_Roberts">open</a>|<a
 href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-3">2019</h3>
@@ -212,6 +212,6 @@ href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated April 2023.</em>]</small></p>
+<p><small>[<em>Last updated July 2023.</em>]</small></p>
 </body>
 </html>
