add link to DOP 73 page

--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@ href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 </blockquote>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020):
-69–102.<br />
+<p><em>Dumbarton Oaks Papers</em> <a
+href="https://www.dopapers.org/for-readers/past-issues/volume-73">73</a>
+(2019; published May 2020): 69–102.<br />
 [<a href="https://archive.org/details/DOP73_05_Roberts">open</a>|<a
 href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
