JHI article published

--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@ Scholarship 3 (University of California Press, 2020). [<a
 href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="future">future</h3>
-<p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
-<blockquote>
-<p><em>Journal of the History of Ideas</em> 84.4 (expected October
-2023).</p>
-</blockquote>
 <p>“Alchemy, History, and Myth in the Souda Lexicon.”</p>
 <blockquote>
 <p>In <em>Alchemy in Byzantium</em>, ed. Gerasimos Merianos (Athens:
@@ -74,7 +69,13 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming).<br />
 <p>In <em>Companion to John of Damascus</em>, ed. Ken Parry (Leiden:
 Brill; invited July 2020; submitted June 2022).</p>
 </blockquote>
-<h3 id="section">2022</h3>
+<h3 id="section">2023</h3>
+<p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
+<blockquote>
+<p><em>Journal of the History of Ideas</em> 84.4 (2023): 595–619.<br />
+[<a href="https://muse.jhu.edu/pub/56/article/909532">pub</a>]</p>
+</blockquote>
+<h3 id="section-1">2022</h3>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
 ʿAbdun.”</p>
 <blockquote>
@@ -116,7 +117,7 @@ href="https://hcommons.org/deposits/item/hc:47227/">PDF</a>]</p>
 [<a href="https://doi.org/10.1515/bz-2022-0012">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:45383/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-1">2021</h3>
+<h3 id="section-2">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
@@ -134,7 +135,7 @@ Ascetic.”</p>
 href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:38251/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-2">2020</h3>
+<h3 id="section-3">2020</h3>
 <p>“Mathematical Philology in the Treatise on Double False Position in
 an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
@@ -151,7 +152,7 @@ href="https://www.dopapers.org/for-readers/past-issues/volume-73">73</a>
 [<a href="https://archive.org/details/DOP73_05_Roberts">open</a>|<a
 href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-3">2019</h3>
+<h3 id="section-4">2019</h3>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn
 al-Faḍl of Antioch.”</p>
 <blockquote>
@@ -162,7 +163,7 @@ and Studies 2 (Leiden: Brill, 2020; published October 2019),
 [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-4">2017</h3>
+<h3 id="section-5">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
 <blockquote>
 <p><em>Journal of the American Oriental Society</em> 137.2 (2017):
@@ -171,7 +172,7 @@ href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-5">2013</h3>
+<h3 id="section-6">2013</h3>
 <p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century
 Arabic ‘Book of Degrees.’”</p>
 <blockquote>
@@ -181,7 +182,7 @@ Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale,
 2013), 279–303.<br />
 [<a href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-6">2012</h3>
+<h3 id="section-7">2012</h3>
 <p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
 <p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012):
@@ -213,6 +214,6 @@ href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated July 2023.</em>]</small></p>
+<p><small>[<em>Last updated October 2023.</em>]</small></p>
 </body>
 </html>
