JWCI article now on hcommons

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo
 <p>[ <a href="https://gralched.hcommons.org/">GrAlchEd: Greek Alchemical
 Editions in Progress</a> ]</p>
 <h1 id="publications">Publications</h1>
+<!--available starting Oct 20, 2025.-->
 <h2 id="book">Book</h2>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and
 Revelation in Byzantine Antioch: The Christian Translation Program of
@@ -123,10 +124,8 @@ href="https://hcommons.org/deposits/item/hc:45383/">PDF</a>]</p>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36.<br />
 [<a href="https://doi.org/10.1086/JWCI83010001">open</a>|<a
-href="https://hcommons.org/deposits/item/hc:41801/">hcommons
-2023-10-14</a>]</p>
+href="https://hcommons.org/deposits/item/hc:41801/">PDF</a>]</p>
 </blockquote>
-<!--available on HC starting 2023-10-14-->
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
 Ascetic.”</p>
 <blockquote>
@@ -214,6 +213,6 @@ href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated October 2023.</em>]</small></p>
+<p><small>[<em>Last updated November 2023.</em>]</small></p>
 </body>
 </html>
