JHI article on hcommons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@ href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo
 <p>[ <a href="https://gralched.hcommons.org/">GrAlchEd: Greek Alchemical
 Editions in Progress</a> ]</p>
 <h1 id="publications">Publications</h1>
-<!--available starting Oct 20, 2025.-->
 <h2 id="book">Book</h2>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and
 Revelation in Byzantine Antioch: The Christian Translation Program of
@@ -74,7 +73,8 @@ Brill; invited July 2020; submitted June 2022).</p>
 <p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
 <blockquote>
 <p><em>Journal of the History of Ideas</em> 84.4 (2023): 595–619.<br />
-[<a href="https://muse.jhu.edu/pub/56/article/909532">pub</a>]</p>
+[<a href="https://muse.jhu.edu/pub/56/article/909532">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:60037/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-1">2022</h3>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
