--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@ Revelation in Byzantine Antioch: The Christian Translation Program of
 Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic
 Scholarship 3 (University of California Press, 2020). [<a
 href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
+<blockquote>
+<p>[Reviewed in <a href="https://doi.org/10.1086/728325"><em>Speculum: A
+Journal of Medieval Studies</em></a>, <a
+href="http://doi.org/10.1353/cat.2022.0090"><em>The Catholic Historical
+Review</em></a>, <a
+href="https://doi.org/10.1163/15700674-12340133"><em>Mediterranean
+Encounters</em></a>, and <a
+href="https://doi.org/10.52214/uw.v29i1.8911"><em>Al-ʿUṣūr al-Wusṭā: The
+Journal of Middle East Medievalists</em></a>.]</p>
+</blockquote>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="future">future</h3>
 <p>“Alchemy, History, and Myth in the Souda Lexicon.”</p>
@@ -213,6 +223,6 @@ href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated November 2023.</em>]</small></p>
+<p><small>[<em>Last updated December 2023.</em>]</small></p>
 </body>
 </html>
