--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@ href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 </blockquote>
 <h2 id="book-reviews">Book Reviews</h2>
+<p>Rustam Shukurov, <em>Byzantine Ideas of Persia, 650–1461</em>
+(Routledge, 2023).</p>
+<blockquote>
+<p><em>The Byzantine Review</em> 6 (2024): 112–126.<br />
+[<a
+href="https://www.uni-muenster.de/Ejournals/index.php/byzrev/article/view/5508/5671">open</a>]</p>
+</blockquote>
 <p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the
 Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <blockquote>
