--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@ Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 (Routledge, 2023).</p>
 <blockquote>
 <p><em>The Byzantine Review</em> 6 (2024): 112–126.<br />
-[<a
-href="https://www.uni-muenster.de/Ejournals/index.php/byzrev/article/view/5508/5671">open</a>]</p>
+[<a href="https://doi.org/10.17879/byzrev-2024-5508">open</a>]</p>
 </blockquote>
 <p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the
 Islamic Conquest</em> (Cambridge University Press, 2016).</p>
