rev Shukurov: add link to hcommons copy

--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@ Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 (Routledge, 2023).</p>
 <blockquote>
 <p><em>The Byzantine Review</em> 6 (2024): 112–126.<br />
-[<a href="https://doi.org/10.17879/byzrev-2024-5508">open</a>]</p>
+[<a href="https://doi.org/10.17879/byzrev-2024-5508">open</a>|<a
+href="https://hcommons.org/deposits/item/hc:65447/">PDF</a>]</p>
 </blockquote>
 <p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the
 Islamic Conquest</em> (Cambridge University Press, 2016).</p>
