open > open access

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ about the article</a>]</p>
 ʿAbdun.”</p>
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 76 (2022): 117–144.<br />
-[<a href="https://archive.org/details/DOP76_06_Roberts">open</a>|<a
+[<a href="https://archive.org/details/DOP76_06_Roberts">open
+access</a>|<a
 href="https://hcommons.org/deposits/item/hc:49627/">PDF</a>]</p>
 </blockquote>
 <p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
@@ -105,12 +106,13 @@ href="https://hcommons.org/deposits/item/hc:49627/">PDF</a>]</p>
 <p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1.1–2
 (2022): 167–199.<br />
 [<a
-href="https://www.euppublishing.com/doi/epdf/10.3366/jlaibs.2022.0009">open</a>]</p>
+href="https://www.euppublishing.com/doi/epdf/10.3366/jlaibs.2022.0009">open
+access</a>]</p>
 </blockquote>
 <p>“Byzantine Engagement with Islamicate Alchemy.”</p>
 <blockquote>
 <p><em>Isis</em> 113.3 (2022): 559–580.<br />
-[<a href="https://doi.org/10.1086/721264">open</a>]<br />
+[<a href="https://doi.org/10.1086/721264">open access</a>]<br />
 [<a
 href="https://hssonline.org/news/616068/Isis-September-2022---Author-Interview-with-Alexandre-Roberts.htm">interview
 about the article</a>]</p>
@@ -137,7 +139,7 @@ href="https://hcommons.org/deposits/item/hc:45383/">PDF</a>]</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36.<br />
-[<a href="https://doi.org/10.1086/JWCI83010001">open</a>|<a
+[<a href="https://doi.org/10.1086/JWCI83010001">open access</a>|<a
 href="https://hcommons.org/deposits/item/hc:41801/">PDF</a>]</p>
 </blockquote>
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
@@ -162,7 +164,8 @@ href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 <p><em>Dumbarton Oaks Papers</em> <a
 href="https://www.dopapers.org/for-readers/past-issues/volume-73">73</a>
 (2019; published May 2020): 69–102.<br />
-[<a href="https://archive.org/details/DOP73_05_Roberts">open</a>|<a
+[<a href="https://archive.org/details/DOP73_05_Roberts">open
+access</a>|<a
 href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-4">2019</h3>
@@ -214,7 +217,7 @@ Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 (Routledge, 2023).</p>
 <blockquote>
 <p><em>The Byzantine Review</em> 6 (2024): 112–126.<br />
-[<a href="https://doi.org/10.17879/byzrev-2024-5508">open</a>|<a
+[<a href="https://doi.org/10.17879/byzrev-2024-5508">open access</a>|<a
 href="https://hcommons.org/deposits/item/hc:65447/">PDF</a>]</p>
 </blockquote>
 <p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the
@@ -231,7 +234,8 @@ href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 <p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29,
 2014.<br />
 [<a
-href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
+href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open
+access</a>]</p>
 </blockquote>
 <hr />
 <p><small>[<em>Last updated April 2024.</em>]</small></p>
