fix link to my book

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@ href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo
 Editions in Progress</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="book">Book</h2>
-<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and
-Revelation in Byzantine Antioch: The Christian Translation Program of
-Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic
-Scholarship 3 (University of California Press, 2020). [<a
+<p><a
+href="https://www.ucpress.edu/books/reason-and-revelation-in-byzantine-antioch/hardcover"><em>Reason
+and Revelation in Byzantine Antioch: The Christian Translation Program
+of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical
+Islamic Scholarship 3 (University of California Press, 2020). [<a
 href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <blockquote>
 <p>[Reviewed in <a
