--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@ Journal of Middle East Medievalists</em></a>.]</p>
 </blockquote>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="future">future</h3>
+<p>“Disentangling Alchemy.”</p>
+<blockquote>
+<p><em>Isis</em> (forthcoming).</p>
+</blockquote>
 <p>“Alchemy, History, and Myth in the Souda Lexicon.”</p>
 <blockquote>
 <p>In <em>Alchemy in Byzantium</em>, ed. Gerasimos Merianos (Athens:
