rev of Mandolino

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ href="https://hcommons.org/deposits/item/hc:45383/">PDF</a>]</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36.<br />
-[<a href="https://doi.org/10.1086/JWCI83010001">open access</a>|<a
+[<a href="https://doi.org/10.1086/JWCI83010001">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:41801/">PDF</a>]</p>
 </blockquote>
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
@@ -218,6 +218,14 @@ href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 </blockquote>
 <h2 id="book-reviews">Book Reviews</h2>
+<p>Giovanni Mandolino, <em>Yaḥyā ibn ʿAdī: Treatise on Divine Unity
+According to the Doctrine of the Christians. Arabic Text, English
+Translation and Commentary</em> (Brill, 2023).</p>
+<blockquote>
+<p><em>Church History</em> (2025).<br />
+[<a href="https://doi.org/10.1017/S0009640725101327">pub</a>|<a
+href="https://works.hcommons.org/records/w6fdd-9yn77">PDF</a>]</p>
+</blockquote>
 <p>Rustam Shukurov, <em>Byzantine Ideas of Persia, 650–1461</em>
 (Routledge, 2023).</p>
 <blockquote>
@@ -243,6 +251,6 @@ href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-ro
 access</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated January 2025.</em>]</small></p>
+<p><small>[<em>Last updated August 2025.</em>]</small></p>
 </body>
 </html>
