add Ferrario review

--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@ href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 </blockquote>
 <h2 id="book-reviews">Book Reviews</h2>
+<p>Gabriele Ferrario, <em>The Book on Alums and Salts of Pseudo-Rāzī:The
+Arabic and Hebrew Traditions</em> (Routledge, 2024).</p>
+<blockquote>
+<p><em>British Journal for the History of Science</em> (2025).<br />
+[<a href="https://doi.org/10.1017/S0007087425000263">pub</a>|<a
+href="https://works.hcommons.org/records/6wwt8-06572">PDF</a>]</p>
+</blockquote>
 <p>Giovanni Mandolino, <em>Yaḥyā ibn ʿAdī: Treatise on Divine Unity
 According to the Doctrine of the Christians. Arabic Text, English
 Translation and Commentary</em> (Brill, 2023).</p>
