--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@ Los Angeles, California</p>
 <p>[ <a
 href="https://dornsife.usc.edu/profile/alexandre-roberts/">faculty
 page</a> | <a
-href="https://hcommons.org/members/amroberts/">hcommons</a> | <a
-href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a>
-|
+href="https://hcommons.org/members/amroberts/">hcommons</a> |
+<!--[zenodo](https://zenodo.org/communities/amroberts/search?page=1&size=20) |-->
 <!-- <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="✺">orcid</a> -->
 <a href="https://orcid.org/0000-0002-6648-5392">orcid</a> ]</p>
 <p>[ <a href="https://gralched.hcommons.org/">GrAlchEd: Greek Alchemical
 Editions in Progress</a> ]</p>
 <h1 id="publications">Publications</h1>
-<p>by type | <a href="pubtopics.html">by topic</a></p>
+<p>by date | <a href="pubtopics.html">by topic</a></p>
 <hr />
 <h2 id="book">Book</h2>
 <p><a
